Добавляет начало адаптивной верстки декоративных элементов

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,3 +1,86 @@
+.main-nav {
+  position: relative;
+  width: auto;
+  min-height: 56px;
+  background-color: $color;
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: 17px;
+  right: 20px;
+  z-index: 2;
+  display: block;
+  width: 23px;
+  height: 22px;
+  background-color: #ffffff;
+  cursor: pointer;
+  border: none;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 23px;
+  height: 4px;
+  background-color: $color;
+  box-shadow: 0 9px 0 0 $color, 0 19px 0 0 $color;
+}
+
+.main-nav--closed .main-nav__toggle:hover::before {
+  background-color: rgba($color, 0.6);
+  box-shadow:
+    0 9px 0 0 rgba($color, 0.6),
+    0 19px 0 0 rgba($color, 0.6);
+}
+
+.main-nav--closed .main-nav__toggle:active::before {
+  background-color: rgba($color, 0.3);
+  box-shadow:
+    0 9px 0 0 rgba($color, 0.3),
+    0 19px 0 0 rgba($color, 0.3);
+}
+
+.main-nav--opened .main-nav__toggle {
+  background-color: $color;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 9px;
+    left: 0;
+    width: 23px;
+    height: 4px;
+    background-color: #ffffff;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+
+  &:hover::before,
+  &:hover::after {
+    background-color: rgba(#ffffff, 0.6);
+  }
+
+  &:active::before,
+  &:active::after {
+    background-color: rgba(#ffffff, 0.3);
+  }
+}
+
 .main-nav__list {
   margin: 0;
   padding: 0;
@@ -23,8 +106,4 @@
   }
 }
 
-.main-nav__toggle {
-  @media (min-width: $tablet-width) {
-    display: none;
-  }
-}
+
