--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -9,8 +9,14 @@
 
 .page-header__logo {
   height: 84px;
+  text-align: center;
 
   @media (min-width: $desktop-width) {
     height: 96px;
   }
+}
+
+.page-header__logo img {
+  width: 102px;
+  height: 84px;
 }
